[gd_scene load_steps=10 format=3 uid="uid://c3dmj4alays6t"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_12j1x"]
[ext_resource type="PackedScene" uid="uid://bvi02x83qisol" path="res://Scenes/person.tscn" id="2_xjsbe"]
[ext_resource type="PackedScene" uid="uid://cynv2uh7uk00b" path="res://Scenes/player.tscn" id="3_c7ytw"]
[ext_resource type="PackedScene" uid="uid://ycmufqbw2tfv" path="res://Scenes/teleport_bar.tscn" id="4_1jc81"]
[ext_resource type="FontFile" uid="uid://cd2btctqwtg0e" path="res://Art/ModernDOS9x16.ttf" id="5_artjk"]
[ext_resource type="PackedScene" uid="uid://3hlxqa7lsvtr" path="res://Scenes/dash_bar.tscn" id="6_s3upg"]
[ext_resource type="PackedScene" uid="uid://dky5cooxib5cx" path="res://Scenes/mind_erase_bar.tscn" id="7_v2hse"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_17dmu"]
size = Vector2(47, 744)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0oe3n"]
size = Vector2(1362.5, 121)

[node name="Test_Scene" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_12j1x")
person_scene = ExtResource("2_xjsbe")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-27, 362)
shape = SubResource("RectangleShape2D_17dmu")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1306, 362)
shape = SubResource("RectangleShape2D_17dmu")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(638, -64)
shape = SubResource("RectangleShape2D_0oe3n")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(641, 786)
shape = SubResource("RectangleShape2D_0oe3n")

[node name="Player" parent="." instance=ExtResource("3_c7ytw")]
position = Vector2(547, 264)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TeleportBar" parent="CanvasLayer" instance=ExtResource("4_1jc81")]
offset_left = 448.0
offset_top = 94.0
offset_right = 762.0
offset_bottom = 144.0

[node name="Score" type="Label" parent="CanvasLayer"]
texture_filter = 1
offset_left = -43.0
offset_top = -3.0
offset_right = 1283.0
offset_bottom = 47.0
theme_override_colors/font_color = Color(0.27451, 0.282353, 0.305882, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("5_artjk")
theme_override_font_sizes/font_size = 32
text = "Score:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DashBar" parent="CanvasLayer" instance=ExtResource("6_s3upg")]
offset_left = 819.0
offset_top = 92.0
offset_right = 1133.0
offset_bottom = 142.0

[node name="MindEraseBar" parent="CanvasLayer" instance=ExtResource("7_v2hse")]
offset_left = 27.0
offset_top = 92.0
offset_right = 341.0
offset_bottom = 142.0
